<resources>
    <string name="app_name">Users</string>
    <string name="version">Application Version:</string>
    <string name="IMEI">Device IMEI: </string>
    <string name="allowReadPhoneState">Allow READ_PHONE_STATE permission</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="photo_textview_title">Photo</string>
    <string name="photo_description">Profile photo</string>
    <string name="email_textview_title">Email:</string>
    <string name="password_textview_title">Password:</string>
    <string name="Change">Change photo</string>
    <string name="save_button_title">Save</string>
    <string name="edit_button_title">Edit</string>
    <string name="profile_menu_item_string">User profile</string>
    <string name="home_menu_item_string">Home</string>
    <string name="about_menu_item_string">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_index_fragment">User manager application</string>
    <string name="file_photo_name">profile.jpg</string>
    <string name="name_textview_title">Name</string>
    <string name="surname_textview_title">Surname</string>
    <string name="phone_number_textview_title">Phone</string>
    <string name="create_profile_button_title">Create</string>
    <string name="signin_button_title">Sign in</string>
    <string name="move_to_create_user_fragment_button">Create</string>
    <string name="logout_menu_item_string">Logout</string>
    <string name="create_item_string">Create new account</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="redirect_to_sign_in_message">You are not signed in! Please, input your data</string>
</resources>
