<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/index_menu_item"
            android:title="@string/home_menu_item_string"
            android:icon="@drawable/ic_home_black_24dp"/>
        <item
            android:id="@+id/first_menu_item"
            android:title="@string/profile_menu_item_string"
            android:icon="@drawable/ic_person_black_24dp"/>
        <item
            android:id="@+id/About"
            android:title="@string/about_menu_item_string"
            android:icon="@drawable/ic_info_outline_black_24dp"/>
        <item
            android:id="@+id/logout_menu_item"
            android:title="@string/logout_menu_item_string"
            android:icon="@drawable/ic_call_missed_outgoing_black_24dp"
            />
    </group>
</menu>