<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userPhotoCreateImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="40dp"
                android:clickable="true"
                android:focusable="true"
                android:src="@mipmap/default_profile_photo_round"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/nameCreateTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/name_textview_title"
                android:inputType="textPersonName"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/surnameCreateTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/surname_textview_title"
                android:inputType="textPersonName"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/phoneNumberCreateTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/phone_number_textview_title"
                android:inputType="phone"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/emailCreateTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/email_textview_title"
                android:inputType="textEmailAddress"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordCreateTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/password_textview_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/createProfileButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginEnd="80dp"
            android:text="@string/create_profile_button_title"
            android:textAllCaps="false" />
    </LinearLayout>

</ScrollView>