<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/layoutCreate">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:orientation="vertical"

        tools:context=".SignInFragment">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/emailSignInTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="30"
                android:hint="@string/email_textview_title"
                android:inputType="textEmailAddress"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/showPasswordRadioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/showPasswordRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="2dp"
                android:text="show" />

            <RadioButton
                android:id="@+id/hidePasswordRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="hide" />
        </RadioGroup>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordSignInTextInput"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="30"
                android:hint="@string/password_textview_title"
                android:inputType="textPassword"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/signInUserButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/signin_button_title"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle"/>

            <Button
                android:id="@+id/moveToCreateUserFragmentButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/move_to_create_user_fragment_button"
                android:textAllCaps="false"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/signInProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>