<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".editProfileFragment">

        <RelativeLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp">

            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/userPhotoEditImageView"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="40dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@mipmap/ic_camera"
                android:src="@mipmap/default_profile_photo"
                app:civ_border_color="#FF000000"
                app:civ_border_width="2dp" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText

                    android:id="@+id/emailEditTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/email_textview_title"
                    android:inputType="textEmailAddress"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/password_textview_title"
                    android:textAppearance="@android:style/TextAppearance.Material.Medium"
                    android:textColor="@color/colorPrimaryDark" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/updateProfileButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="80dp"
                android:text="@string/save_button_title"
                android:textAllCaps="false" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>