<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detailLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="403dp"
        android:layout_height="match_parent"
        android:id="@+id/relativeLayout">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photoImageView"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@mipmap/default_profile_photo"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="0.001dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        android:layout_width="266dp"
        android:layout_height="365dp"
        android:layout_alignParentTop="true"
        android:layout_marginStart="50dp"
        android:layout_marginTop="202dp"
        android:gravity="left"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/email_textview_title"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoImageView" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="8dp"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/photoImageView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/password_textview_title"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:inputType="textPassword"
            android:textAppearance="@android:style/TextAppearance.Material.Medium"
            android:textColor="@color/colorPrimaryDark"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/photoImageView" />

        <Button
            android:id="@+id/editButton"
            android:layout_width="102dp"
            android:layout_height="41dp"
            android:layout_gravity="end"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:onClick="openEditableProfile"
            android:text="@string/edit_button_title"
            android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>

<!--
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aboutActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="0dp"
        tools:ignore="MissingConstraints">

        <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/photoImageView"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:src="@mipmap/default_profile_photo"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="0.001dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="50dp"
            android:gravity="left"
            android:orientation="vertical">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_textview_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="89dp"
                android:layout_height="wrap_content"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password_textview_title"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/passwordTextView"
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:textAppearance="@android:style/TextAppearance.Material.Medium"
                android:textColor="@color/colorPrimaryDark" />

            <Button
                android:id="@+id/editButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="80dp"
                android:onClick="openEditableProfile"
                android:text="@string/edit_button_title"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>
-->